--- a/lemons copy/lemonCopy.html
+++ b/lemons copy/lemonCopy.html
@@ -29,7 +29,7 @@
 <div class="class"></div>
 <div class="class"></div>
 
-<span>lemon</span>
+<span></span>
 <span></span>
 <span></span>
 <span></span>
